--- a/cadquery/FCAD_script_generator/L_Chip_SMD/cq_parameters.yaml
+++ b/cadquery/FCAD_script_generator/L_Chip_SMD/cq_parameters.yaml
@@ -48,6 +48,16 @@ L_0805_2012Metric:
   rotation: 0
   source: 'http://search.murata.co.jp/Ceramy/image/img/A01X/G101/ENG/GC321BD72E223KX03-01.pdf'
 
+L_0806_2016Metric:
+  length: 2.0
+  width: 1.60
+  height: 0.85
+  pin_band: 0.4
+  pin_thickness: 'auto'
+  edge_fillet: 'auto'
+  rotation: 0
+  source: 'https://product.tdk.com/en/search/inductor/inductor/smd/info/print_pdf'
+
 L_1008_2520Metric:
   length: 2.5
   width: 2.0
